# vcm-fyi-removal-data

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: update-data.yml
output/: credits-isometric.parquet  projects-isometric.parquet
output/isometric/: credits.parquet  projects.parquet
output/puro-earth/: credits.parquet  projects.parquet
raw/: Puro_Earth_Registry-Issuance_exports-Mon Dec 15 2025.csv  Puro_Earth_Registry-Project_exports-Mon Dec 15 2025.csv  Puro_Earth_Registry-Retirement_exports-Mon Dec 15 2025.csv  fetch_metadata.json  isometric_issuances.csv  isometric_projects.csv  isometric_retirements.csv
removal_db_data/: __init__.py  common.py  isometric.py  models.py  puro.py
removal_db_data/configs/: credits-column-mapping.json  projects-column-mapping.json  type-category-mapping.json
scripts/: fetch_isometric.py  run_pipeline.py
